progress with patient network

--- a/Section 2/DNAmeth.ipynb
+++ b/Section 2/DNAmeth.ipynb
@@ -620,6 +620,248 @@
     "expression_data = data[\"datExpr\"]\n",
     "expression_data"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "2d1365c3-75a0-4439-be1f-1a80d1975e22",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "smoking_df = pd.read_csv(r\"C:\\cdt_data\\montreal data\\smoking.tsv\" , delimiter='\\t') #Tab seperated document from EWAS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "2bda1070-86c1-4fe4-b9ae-0485cd2f1c16",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>author</th>\n",
+       "      <th>consortium</th>\n",
+       "      <th>pmid</th>\n",
+       "      <th>date</th>\n",
+       "      <th>trait</th>\n",
+       "      <th>efo</th>\n",
+       "      <th>analysis</th>\n",
+       "      <th>source</th>\n",
+       "      <th>outcome</th>\n",
+       "      <th>exposure</th>\n",
+       "      <th>...</th>\n",
+       "      <th>chrpos</th>\n",
+       "      <th>chr</th>\n",
+       "      <th>pos</th>\n",
+       "      <th>gene</th>\n",
+       "      <th>type</th>\n",
+       "      <th>beta</th>\n",
+       "      <th>se</th>\n",
+       "      <th>p</th>\n",
+       "      <th>details</th>\n",
+       "      <th>study_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Sikdar S</td>\n",
+       "      <td>CHARGE</td>\n",
+       "      <td>31536415</td>\n",
+       "      <td>2019-09-19</td>\n",
+       "      <td>Smoking</td>\n",
+       "      <td>EFO_0009115, EFO_0006527, EFO_0004318</td>\n",
+       "      <td>random effects meta-analysis</td>\n",
+       "      <td>Table S2</td>\n",
+       "      <td>DNA methylation</td>\n",
+       "      <td>Smoking</td>\n",
+       "      <td>...</td>\n",
+       "      <td>chr2:233284934</td>\n",
+       "      <td>2</td>\n",
+       "      <td>233284934</td>\n",
+       "      <td>-</td>\n",
+       "      <td>Island</td>\n",
+       "      <td>-0.08545</td>\n",
+       "      <td>0.00131</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>31536415_Sikdar-S_smoking_random_effects_meta-...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Sikdar S</td>\n",
+       "      <td>CHARGE</td>\n",
+       "      <td>31536415</td>\n",
+       "      <td>2019-09-19</td>\n",
+       "      <td>Smoking</td>\n",
+       "      <td>EFO_0009115, EFO_0006527, EFO_0004318</td>\n",
+       "      <td>random effects meta-analysis</td>\n",
+       "      <td>Table S2</td>\n",
+       "      <td>DNA methylation</td>\n",
+       "      <td>Smoking</td>\n",
+       "      <td>...</td>\n",
+       "      <td>chr19:17000585</td>\n",
+       "      <td>19</td>\n",
+       "      <td>17000585</td>\n",
+       "      <td>F2RL3</td>\n",
+       "      <td>North shore</td>\n",
+       "      <td>-0.07233</td>\n",
+       "      <td>0.00129</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>31536415_Sikdar-S_smoking_random_effects_meta-...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Sikdar S</td>\n",
+       "      <td>CHARGE</td>\n",
+       "      <td>31536415</td>\n",
+       "      <td>2019-09-19</td>\n",
+       "      <td>Smoking</td>\n",
+       "      <td>EFO_0009115, EFO_0006527, EFO_0004318</td>\n",
+       "      <td>random effects meta-analysis</td>\n",
+       "      <td>Table S2</td>\n",
+       "      <td>DNA methylation</td>\n",
+       "      <td>Smoking</td>\n",
+       "      <td>...</td>\n",
+       "      <td>chr5:373378</td>\n",
+       "      <td>5</td>\n",
+       "      <td>373378</td>\n",
+       "      <td>AHRR</td>\n",
+       "      <td>North shore</td>\n",
+       "      <td>-0.03138</td>\n",
+       "      <td>0.00078</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>31536415_Sikdar-S_smoking_random_effects_meta-...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Sikdar S</td>\n",
+       "      <td>CHARGE</td>\n",
+       "      <td>31536415</td>\n",
+       "      <td>2019-09-19</td>\n",
+       "      <td>Smoking</td>\n",
+       "      <td>EFO_0009115, EFO_0006527, EFO_0004318</td>\n",
+       "      <td>random effects meta-analysis</td>\n",
+       "      <td>Table S2</td>\n",
+       "      <td>DNA methylation</td>\n",
+       "      <td>Smoking</td>\n",
+       "      <td>...</td>\n",
+       "      <td>chr2:233284402</td>\n",
+       "      <td>2</td>\n",
+       "      <td>233284402</td>\n",
+       "      <td>-</td>\n",
+       "      <td>Island</td>\n",
+       "      <td>-0.07381</td>\n",
+       "      <td>0.00132</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>31536415_Sikdar-S_smoking_random_effects_meta-...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Sikdar S</td>\n",
+       "      <td>CHARGE</td>\n",
+       "      <td>31536415</td>\n",
+       "      <td>2019-09-19</td>\n",
+       "      <td>Smoking</td>\n",
+       "      <td>EFO_0009115, EFO_0006527, EFO_0004318</td>\n",
+       "      <td>random effects meta-analysis</td>\n",
+       "      <td>Table S2</td>\n",
+       "      <td>DNA methylation</td>\n",
+       "      <td>Smoking</td>\n",
+       "      <td>...</td>\n",
+       "      <td>chr6:30720080</td>\n",
+       "      <td>6</td>\n",
+       "      <td>30720080</td>\n",
+       "      <td>-</td>\n",
+       "      <td>Open sea</td>\n",
+       "      <td>-0.08558</td>\n",
+       "      <td>0.00159</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>31536415_Sikdar-S_smoking_random_effects_meta-...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 31 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     author consortium      pmid        date    trait  \\\n",
+       "0  Sikdar S     CHARGE  31536415  2019-09-19  Smoking   \n",
+       "1  Sikdar S     CHARGE  31536415  2019-09-19  Smoking   \n",
+       "2  Sikdar S     CHARGE  31536415  2019-09-19  Smoking   \n",
+       "3  Sikdar S     CHARGE  31536415  2019-09-19  Smoking   \n",
+       "4  Sikdar S     CHARGE  31536415  2019-09-19  Smoking   \n",
+       "\n",
+       "                                     efo                      analysis  \\\n",
+       "0  EFO_0009115, EFO_0006527, EFO_0004318  random effects meta-analysis   \n",
+       "1  EFO_0009115, EFO_0006527, EFO_0004318  random effects meta-analysis   \n",
+       "2  EFO_0009115, EFO_0006527, EFO_0004318  random effects meta-analysis   \n",
+       "3  EFO_0009115, EFO_0006527, EFO_0004318  random effects meta-analysis   \n",
+       "4  EFO_0009115, EFO_0006527, EFO_0004318  random effects meta-analysis   \n",
+       "\n",
+       "     source          outcome exposure  ...          chrpos chr        pos  \\\n",
+       "0  Table S2  DNA methylation  Smoking  ...  chr2:233284934   2  233284934   \n",
+       "1  Table S2  DNA methylation  Smoking  ...  chr19:17000585  19   17000585   \n",
+       "2  Table S2  DNA methylation  Smoking  ...     chr5:373378   5     373378   \n",
+       "3  Table S2  DNA methylation  Smoking  ...  chr2:233284402   2  233284402   \n",
+       "4  Table S2  DNA methylation  Smoking  ...   chr6:30720080   6   30720080   \n",
+       "\n",
+       "    gene         type     beta       se    p details  \\\n",
+       "0      -       Island -0.08545  0.00131  0.0     NaN   \n",
+       "1  F2RL3  North shore -0.07233  0.00129  0.0     NaN   \n",
+       "2   AHRR  North shore -0.03138  0.00078  0.0     NaN   \n",
+       "3      -       Island -0.07381  0.00132  0.0     NaN   \n",
+       "4      -     Open sea -0.08558  0.00159  0.0     NaN   \n",
+       "\n",
+       "                                            study_id  \n",
+       "0  31536415_Sikdar-S_smoking_random_effects_meta-...  \n",
+       "1  31536415_Sikdar-S_smoking_random_effects_meta-...  \n",
+       "2  31536415_Sikdar-S_smoking_random_effects_meta-...  \n",
+       "3  31536415_Sikdar-S_smoking_random_effects_meta-...  \n",
+       "4  31536415_Sikdar-S_smoking_random_effects_meta-...  \n",
+       "\n",
+       "[5 rows x 31 columns]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "smoking_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d16a1b75-bc79-4d73-8008-f48c134d4b43",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
