--- a/Section 2/DNAmeth.ipynb
+++ b/Section 2/DNAmeth.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "id": "6c4a9d12-c5ab-4c21-b6e2-d76e4303f544",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "id": "f3a96b02-a10c-4e0f-9b49-bea4bfca3c32",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "id": "1c5fda4a-565d-468a-ba41-9425cde3a943",
    "metadata": {},
    "outputs": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "id": "89253147-2e50-419a-b61b-a3933dc965ac",
    "metadata": {},
    "outputs": [
@@ -226,7 +226,7 @@
        "[459 rows x 6 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "id": "69bb5b57-e523-476b-942a-b31312bd7915",
    "metadata": {},
    "outputs": [
@@ -611,7 +611,7 @@
        "[459 rows x 300000 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -623,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "id": "2d1365c3-75a0-4439-be1f-1a80d1975e22",
    "metadata": {},
    "outputs": [],
@@ -633,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 23,
    "id": "2bda1070-86c1-4fe4-b9ae-0485cd2f1c16",
    "metadata": {},
    "outputs": [
@@ -846,7 +846,7 @@
        "[5 rows x 31 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -857,11 +857,443 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "d16a1b75-bc79-4d73-8008-f48c134d4b43",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "common_annotated_cpgs = list(smoking_df['cpg'].value_counts()[smoking_df['cpg'].value_counts() > 10].index) \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "7394a3c7-f8b4-4a02-b979-d709fc4eee45",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['cg05575921',\n",
+       " 'cg01940273',\n",
+       " 'cg21566642',\n",
+       " 'cg03636183',\n",
+       " 'cg25189904',\n",
+       " 'cg21161138',\n",
+       " 'cg09935388',\n",
+       " 'cg25648203',\n",
+       " 'cg14753356',\n",
+       " 'cg06126421',\n",
+       " 'cg05951221',\n",
+       " 'cg19859270',\n",
+       " 'cg13193840',\n",
+       " 'cg19572487',\n",
+       " 'cg15342087',\n",
+       " 'cg24859433',\n",
+       " 'cg11660018',\n",
+       " 'cg21611682',\n",
+       " 'cg03329539',\n",
+       " 'cg23079012',\n",
+       " 'cg12803068',\n",
+       " 'cg27241845',\n",
+       " 'cg06644428',\n",
+       " 'cg26703534',\n",
+       " 'cg05284742',\n",
+       " 'cg03991871',\n",
+       " 'cg21322436',\n",
+       " 'cg07339236',\n",
+       " 'cg11554391',\n",
+       " 'cg01692968',\n",
+       " 'cg25949550',\n",
+       " 'cg14817490',\n",
+       " 'cg27537125',\n",
+       " 'cg01901332',\n",
+       " 'cg22132788',\n",
+       " 'cg11207515',\n",
+       " 'cg14580211',\n",
+       " 'cg12876356',\n",
+       " 'cg23771366',\n",
+       " 'cg26963277',\n",
+       " 'cg14624207',\n",
+       " 'cg12075928',\n",
+       " 'cg11902777',\n",
+       " 'cg24090911',\n",
+       " 'cg07251887',\n",
+       " 'cg23916896',\n",
+       " 'cg26271591',\n",
+       " 'cg02657160',\n",
+       " 'cg04551776',\n",
+       " 'cg12806681',\n",
+       " 'cg23161492',\n",
+       " 'cg00073090',\n",
+       " 'cg18316974',\n",
+       " 'cg08709672',\n",
+       " 'cg18146737',\n",
+       " 'cg04885881',\n",
+       " 'cg02451831',\n",
+       " 'cg20295214',\n",
+       " 'cg26361535',\n",
+       " 'cg00310412',\n",
+       " 'cg15474579',\n",
+       " 'cg19717773',\n",
+       " 'cg03547355',\n",
+       " 'cg24540678',\n",
+       " 'cg23576855',\n",
+       " 'cg01207684',\n",
+       " 'cg25305703',\n",
+       " 'cg02583484',\n",
+       " 'cg17287155',\n",
+       " 'cg10750182',\n",
+       " 'cg15159987',\n",
+       " 'cg01899089',\n",
+       " 'cg12513616',\n",
+       " 'cg07986378',\n",
+       " 'cg22851561',\n",
+       " 'cg00501876',\n",
+       " 'cg23110422',\n",
+       " 'cg03604011',\n",
+       " 'cg17087741',\n",
+       " 'cg23480021',\n",
+       " 'cg03450842',\n",
+       " 'cg02532700',\n",
+       " 'cg19089201',\n",
+       " 'cg04180046',\n",
+       " 'cg24838345',\n",
+       " 'cg11556164',\n",
+       " 'cg24996979',\n",
+       " 'cg16611234',\n",
+       " 'cg12547807',\n",
+       " 'cg03274391',\n",
+       " 'cg07123182',\n",
+       " 'cg05329352',\n",
+       " 'cg21913886',\n",
+       " 'cg12101586',\n",
+       " 'cg15693572',\n",
+       " 'cg14712058',\n",
+       " 'cg13039251',\n",
+       " 'cg01127300',\n",
+       " 'cg17924476',\n",
+       " 'cg19254163',\n",
+       " 'cg17619755',\n",
+       " 'cg08035323',\n",
+       " 'cg13937905',\n",
+       " 'cg07826859',\n",
+       " 'cg08149865',\n",
+       " 'cg18642234',\n",
+       " 'cg06235438',\n",
+       " 'cg11231349',\n",
+       " 'cg13399816',\n",
+       " 'cg07381806',\n",
+       " 'cg18446336',\n",
+       " 'cg03707168',\n",
+       " 'cg13038618',\n",
+       " 'cg16556677',\n",
+       " 'cg09662411',\n",
+       " 'cg01208318',\n",
+       " 'cg17024919',\n",
+       " 'cg16519923',\n",
+       " 'cg13184736',\n",
+       " 'cg05460226',\n",
+       " 'cg06595162',\n",
+       " 'cg19713851',\n",
+       " 'cg24556382',\n",
+       " 'cg17372101',\n",
+       " 'cg01744331',\n",
+       " 'cg09837977',\n",
+       " 'cg05221370',\n",
+       " 'cg21140898',\n",
+       " 'cg15187398',\n",
+       " 'cg00295485',\n",
+       " 'cg06972908',\n",
+       " 'cg01731783',\n",
+       " 'cg23973524',\n",
+       " 'cg26764244',\n",
+       " 'cg06338710',\n",
+       " 'cg26718213']"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "common_annotated_cpgs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "4267100e-d757-462f-94b4-f95bf2bb7801",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cpgs = set(common_annotated_cpgs) & set(expression_data.columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "2c95702a-07af-4458-ad50-66b270d267fe",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'cg00073090',\n",
+       " 'cg00295485',\n",
+       " 'cg00310412',\n",
+       " 'cg00501876',\n",
+       " 'cg01127300',\n",
+       " 'cg01207684',\n",
+       " 'cg01208318',\n",
+       " 'cg01731783',\n",
+       " 'cg01744331',\n",
+       " 'cg01899089',\n",
+       " 'cg01901332',\n",
+       " 'cg01940273',\n",
+       " 'cg02451831',\n",
+       " 'cg02532700',\n",
+       " 'cg02583484',\n",
+       " 'cg02657160',\n",
+       " 'cg03329539',\n",
+       " 'cg03450842',\n",
+       " 'cg03547355',\n",
+       " 'cg03604011',\n",
+       " 'cg03636183',\n",
+       " 'cg03707168',\n",
+       " 'cg03991871',\n",
+       " 'cg04180046',\n",
+       " 'cg04551776',\n",
+       " 'cg04885881',\n",
+       " 'cg05284742',\n",
+       " 'cg05329352',\n",
+       " 'cg05575921',\n",
+       " 'cg05951221',\n",
+       " 'cg06126421',\n",
+       " 'cg06235438',\n",
+       " 'cg06338710',\n",
+       " 'cg06595162',\n",
+       " 'cg06644428',\n",
+       " 'cg06972908',\n",
+       " 'cg07123182',\n",
+       " 'cg07251887',\n",
+       " 'cg07826859',\n",
+       " 'cg08035323',\n",
+       " 'cg08149865',\n",
+       " 'cg08709672',\n",
+       " 'cg09662411',\n",
+       " 'cg09837977',\n",
+       " 'cg09935388',\n",
+       " 'cg10750182',\n",
+       " 'cg11231349',\n",
+       " 'cg11660018',\n",
+       " 'cg11902777',\n",
+       " 'cg12101586',\n",
+       " 'cg12547807',\n",
+       " 'cg12803068',\n",
+       " 'cg12806681',\n",
+       " 'cg12876356',\n",
+       " 'cg13039251',\n",
+       " 'cg13184736',\n",
+       " 'cg13399816',\n",
+       " 'cg13937905',\n",
+       " 'cg14580211',\n",
+       " 'cg14624207',\n",
+       " 'cg14712058',\n",
+       " 'cg14753356',\n",
+       " 'cg14817490',\n",
+       " 'cg15159987',\n",
+       " 'cg15187398',\n",
+       " 'cg15342087',\n",
+       " 'cg15474579',\n",
+       " 'cg16519923',\n",
+       " 'cg16556677',\n",
+       " 'cg16611234',\n",
+       " 'cg17024919',\n",
+       " 'cg17287155',\n",
+       " 'cg17372101',\n",
+       " 'cg17619755',\n",
+       " 'cg17924476',\n",
+       " 'cg18146737',\n",
+       " 'cg18316974',\n",
+       " 'cg18446336',\n",
+       " 'cg18642234',\n",
+       " 'cg19089201',\n",
+       " 'cg19254163',\n",
+       " 'cg19717773',\n",
+       " 'cg19859270',\n",
+       " 'cg20295214',\n",
+       " 'cg21161138',\n",
+       " 'cg21322436',\n",
+       " 'cg21566642',\n",
+       " 'cg21913886',\n",
+       " 'cg22132788',\n",
+       " 'cg22851561',\n",
+       " 'cg23079012',\n",
+       " 'cg23110422',\n",
+       " 'cg23161492',\n",
+       " 'cg23771366',\n",
+       " 'cg23973524',\n",
+       " 'cg24090911',\n",
+       " 'cg24540678',\n",
+       " 'cg24556382',\n",
+       " 'cg24838345',\n",
+       " 'cg24859433',\n",
+       " 'cg24996979',\n",
+       " 'cg25189904',\n",
+       " 'cg25305703',\n",
+       " 'cg25648203',\n",
+       " 'cg25949550',\n",
+       " 'cg26361535',\n",
+       " 'cg26703534',\n",
+       " 'cg26718213',\n",
+       " 'cg26764244',\n",
+       " 'cg26963277',\n",
+       " 'cg27241845',\n",
+       " 'cg27537125'}"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cpgs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "01fec280-fde5-492c-b070-8bf0f0e1e136",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "expression_data_filt = expression_data.loc[ : , list(cpgs)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "2b133a9e-2980-4ae5-b227-16f285738f0a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import astropy.stats\n",
+    "def abs_bicorr(data) : \n",
+    "\n",
+    "    data = data._get_numeric_data()\n",
+    "    cols = data.columns\n",
+    "    idx = cols.copy()\n",
+    "    mat = data.to_numpy(dtype=float, na_value=np.nan, copy=False)\n",
+    "    mat = mat.T\n",
+    "\n",
+    "    K = len(cols)\n",
+    "    correl = np.empty((K, K), dtype=np.float32)\n",
+    "    mask = np.isfinite(mat)\n",
+    "\n",
+    "    bicorr = astropy.stats.biweight_midcovariance(mat)\n",
+    "\n",
+    "    for i in range(K) : \n",
+    "        correl[i , : ] = bicorr[i , :] / np.sqrt(bicorr[i,i] * np.diag(bicorr))\n",
+    "        \n",
+    "    return pd.DataFrame(data = correl , index=idx , columns=cols , dtype=np.float32)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "01ee3ef7-7218-4494-918b-44d8ea139bcc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "patient_similarity_matrix = abs_bicorr(expression_data_filt.T)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "09d95cac-bf68-48a1-9749-c8b38858cb80",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import matplotlib.patches as mpatches\n",
+    "import astropy.stats\n",
+    "from palettable import wesanderson\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import networkx as nx\n",
+    "\n",
+    "import sklearn as sk\n",
+    "import seaborn as sns\n",
+    "from sklearn.metrics import precision_recall_curve , average_precision_score , recall_score ,  PrecisionRecallDisplay\n",
+    "\n",
+    "\n",
+    "def get_k_neighbours(df , k ) : \n",
+    "    k_neighbours = {}\n",
+    "    if abs(df.max().max()) > 1 : \n",
+    "        print('Dataframe should be a similarity matrix of max value 1')\n",
+    "    else:\n",
+    "        np.fill_diagonal(df.values , 1)\n",
+    "        for node in df.index : \n",
+    "            neighbours = df.loc[node].nlargest(k+1).index.to_list()[1:] #Exclude the node itself\n",
+    "            k_neighbours[node] = neighbours\n",
+    "        \n",
+    "    return k_neighbours\n",
+    "\n",
+    "def plot_knn_network(df , K , labels , node_colours = ['skyblue'] , node_size = 300) : \n",
+    "    # Get K-nearest neighbours for each node\n",
+    "    k_neighbours = get_k_neighbours(df , k = K)\n",
+    "    \n",
+    "    # Create a NetworkX graph\n",
+    "    G = nx.Graph()\n",
+    "    \n",
+    "    # Add nodes to the graph\n",
+    "    G.add_nodes_from(df.index)\n",
+    "    \n",
+    "    nx.set_node_attributes(G , labels.astype('category').cat.codes , 'label')\n",
+    "    nx.set_node_attributes(G , pd.Series(np.arange(len(df.index)) , index=df.index) , 'idx')\n",
+    "\n",
+    "    # Add edges based on the k-nearest neighbours\n",
+    "    for node, neighbours in k_neighbours.items():\n",
+    "        for neighbor in neighbours:\n",
+    "            G.add_edge(neighbor, node)\n",
+    "\n",
+    "    plt.figure(figsize=(10, 8))\n",
+    "    nx.draw(G, with_labels=False, font_weight='bold', node_size=node_size, node_color=node_colours, font_size=8)\n",
+    "    \n",
+    "    return G\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "51327a1c-0fa7-468c-ac17-48a85f050859",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'NoneType' object has no attribute 'astype'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[41], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m G \u001b[38;5;241m=\u001b[39m plot_knn_network(patient_similarity_matrix , \u001b[38;5;241m25\u001b[39m, \u001b[38;5;28;01mNone\u001b[39;00m) \u001b[38;5;66;03m# plot the network\u001b[39;00m\n\u001b[0;32m      2\u001b[0m plt\u001b[38;5;241m.\u001b[39mtitle(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mEWAS Smoking Patient Similarity Network\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      3\u001b[0m \u001b[38;5;66;03m#legend_handles = gen_graph_legend(node_colour , G , 'label') # generate the legend\u001b[39;00m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;66;03m#plt.legend(handles = legend_handles)\u001b[39;00m\n",
+      "Cell \u001b[1;32mIn[38], line 36\u001b[0m, in \u001b[0;36mplot_knn_network\u001b[1;34m(df, K, labels, node_colours, node_size)\u001b[0m\n\u001b[0;32m     33\u001b[0m \u001b[38;5;66;03m# Add nodes to the graph\u001b[39;00m\n\u001b[0;32m     34\u001b[0m G\u001b[38;5;241m.\u001b[39madd_nodes_from(df\u001b[38;5;241m.\u001b[39mindex)\n\u001b[1;32m---> 36\u001b[0m nx\u001b[38;5;241m.\u001b[39mset_node_attributes(G , labels\u001b[38;5;241m.\u001b[39mastype(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcategory\u001b[39m\u001b[38;5;124m'\u001b[39m)\u001b[38;5;241m.\u001b[39mcat\u001b[38;5;241m.\u001b[39mcodes , \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlabel\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m     37\u001b[0m nx\u001b[38;5;241m.\u001b[39mset_node_attributes(G , pd\u001b[38;5;241m.\u001b[39mSeries(np\u001b[38;5;241m.\u001b[39marange(\u001b[38;5;28mlen\u001b[39m(df\u001b[38;5;241m.\u001b[39mindex)) , index\u001b[38;5;241m=\u001b[39mdf\u001b[38;5;241m.\u001b[39mindex) , \u001b[38;5;124m'\u001b[39m\u001b[38;5;124midx\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m     39\u001b[0m \u001b[38;5;66;03m# Add edges based on the k-nearest neighbours\u001b[39;00m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'astype'"
+     ]
+    }
+   ],
+   "source": [
+    "G = plot_knn_network(patient_similarity_matrix , 25, None) # plot the network\n",
+    "plt.title('EWAS Smoking Patient Similarity Network')\n",
+    "#legend_handles = gen_graph_legend(node_colour , G , 'label') # generate the legend\n",
+    "#plt.legend(handles = legend_handles)\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
